# claude-worktree-orchestrator

./: .gitignore  Cargo.toml  Makefile  README.md  cwo.toml.example
.githooks/: pre-commit
.github/workflows/: ci.yml
docs/: slack-integration-plan.md
src/: app.rs  autopilot.rs  builder.rs  config.rs  dag.rs  events.rs  github.rs  main.rs  messages.rs  monitor.rs  poller.rs  prompt.rs  state.rs  ui.rs  usage.rs  util.rs
src/dashboard/: mod.rs  routes.rs  types.rs  ws.rs
src/dashboard/static/: index.html
