[package]
name = "cwo"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cwo"
path = "src/main.rs"

[features]
default = []
dashboard = ["axum", "tower-http", "tokio-tungstenite"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
toml = "0.8"

# Dashboard (optional)
axum = { version = "0.8", features = ["ws"], optional = true }
tower-http = { version = "0.6", features = ["cors"], optional = true }
tokio-tungstenite = { version = "0.26", optional = true }
